--- a/index.html
+++ b/index.html
@@ -29,28 +29,10 @@
                 <img src="images/face.png" class="face" />
             </div>
             <h2>Hi, I'm <span style="color:#13acc2">Meaghan Choi</span></h2>
-            <p class="front_p"> I’m a product designer with a passion for illustration. I love creating digital art, solving design problems and eating as a hobby. I'm looking to join a team where I can learn, grow, and have some great experiences along the way!</p>
+            <p class="front_p"> I’m a senior studying Systems Design Engineering at the University of Waterloo. I like pushing the bounds of design and believe that small changes can make big impacts.</p>
         </div>
         <div class="work">
-            <a href="noom.html">
-                <div class="portfolio_bg lg">
-                    <div id="noom_bg" class="portfolio_bg_img"></div>
-                    <div class="label">
-                        <img src="images/noom_logo.png" class="logo" />
-                        <h4 class="featured">Product Design</h4>
-                    </div>
-                </div>
-            </a>
-            <a href="brol.html">
-                <div class="portfolio_bg lg">
-                    <div id="brol_bg" class="portfolio_bg_img"></div>
-                    <div class="label">
-                        <img src="images/br_logo.png" class="logo" />
-                        <h4 class="featured">Interaction Design</h4>
-                    </div>
-                </div>
-            </a>
-            <a href="fb4b.html">
+            <a href="habits.html">
                 <div class="portfolio_bg sm">
                     <div id="fb4b_bg" class="portfolio_bg_img"></div>
                     <div class="label">
