--- a/index.html
+++ b/index.html
@@ -2,70 +2,63 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <title>Meaghan Choi</title>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href='https://fonts.googleapis.com/css?family=Crimson+Text:400,700,600' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Tinos:400,700|Lato:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-    <link href="style/reset.css" rel="stylesheet" type="text/css">
-    <link href="style/main.css" rel="stylesheet" type="text/css">
+  <title>Meaghan Choi</title>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href='https://fonts.googleapis.com/css?family=Crimson+Text:400,700,600' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Tinos:400,700|Lato:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+  <link href="style/reset.css" rel="stylesheet" type="text/css">
+  <link href="style/main.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-    <nav id="nav">
-        <div class="left name">
-            <a href="index.html">Meaghan Choi</a>
-        </div>
-        <div class="right">
-            <ul class="nav ">
-                <li><a href="images/CV.pdf" target="_blank">Resume</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </div>
-    </nav>
-    <div class="main">
-        <div class="main_copy">
-            <div class="circle center">
-                <img src="images/face.png" class="face" />
-            </div>
-            <h2>Hi, I'm <span style="color:#13acc2">Meaghan Choi</span></h2>
-            <p class="front_p"> I’m a senior studying Systems Design Engineering at the University of Waterloo. I like pushing the bounds of design and believe that small changes can make big impacts.</p>
-        </div>
-        <div class="work">
-            <a href="habits.html">
-                <div class="portfolio_bg sm">
-                    <div id="fb4b_bg" class="portfolio_bg_img"></div>
-                    <div class="label">
-                        <img src="images/fb4b_logo.png" class="logo" />
-                        <h4>Interaction Design</h4>
-                    </div>
-                </div>
-            </a>
-            <div class="row">
-                <a href="cibc.html">
-                    <div class="two portfolio_bg sm">
-                        <div id="cibc_bg" class="portfolio_bg_img"></div>
-                        <div class="label">
-                            <img src="images/cibc_logo.png" class="logo" />
-                            <h4>Product Design</h4>
-                        </div>
-                    </div>
-                </a>
-                <a href="td.html">
-                    <div class="two portfolio_bg sm last">
-                        <div id="td_bg" class="portfolio_bg_img"></div>
-                        <div class="label">
-                            <img src="images/td_logo.png" class="logo" />
-                            <h4>Visuals & Illustration</h4>
-                        </div>
-                    </div>
-                </a>
-            </div>
-        </div>
+  <nav id="nav">
+    <div class="left name">
+      <a href="index.html">Meaghan Choi</a>
     </div>
-    <footer>
-    </footer>
-    <script type="text/javascript" src="script/script.js"></script>
+    <div class="right">
+      <ul class="nav ">
+        <li><a href="images/CV.pdf" target="_blank">Resume</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
+  <div class="main">
+    <div class="work">
+      <a href="habits.html">
+        <div class="portfolio_bg sm">
+          <div id="fb4b_bg" class="portfolio_bg_img"></div>
+          <div class="label">
+            <img src="images/fb4b_logo.png" class="logo" />
+            <h4>Habit Forming Design</h4>
+          </div>
+        </div>
+      </a>
+      <div class="row">
+        <a href="cibc.html">
+          <div class="two portfolio_bg sm">
+            <div id="cibc_bg" class="portfolio_bg_img"></div>
+            <div class="label">
+              <img src="images/cibc_logo.png" class="logo" />
+              <h4>Product Design</h4>
+            </div>
+          </div>
+        </a>
+        <a href="td.html">
+          <div class="two portfolio_bg sm last">
+            <div id="td_bg" class="portfolio_bg_img"></div>
+            <div class="label">
+              <img src="images/td_logo.png" class="logo" />
+              <h4>Visuals & Illustration</h4>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+  </div>
+  <footer>
+  </footer>
+  <script type="text/javascript" src="script/script.js"></script>
 </body>
 
 </html>
