Update landing page of blog

--- a/index.html
+++ b/index.html
@@ -14,51 +14,34 @@
 <body>
   <nav id="nav">
     <div class="left name">
-      <a href="index.html">Meaghan Choi</a>
+      <a href="index.html">Meaghan's Thoughts</a>
     </div>
     <div class="right">
       <ul class="nav ">
-        <li><a href="images/CV.pdf" target="_blank">Resume</a></li>
+        <li><a href="meaghanchoi.com">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
   </nav>
-  <div class="main">
-    <div class="work">
-      <a href="habits.html">
-        <div class="portfolio_bg sm">
-          <div id="fb4b_bg" class="portfolio_bg_img"></div>
-          <div class="label">
-            <img src="images/fb4b_logo.png" class="logo" />
-            <h4>Habit Forming Design</h4>
-          </div>
-        </div>
-      </a>
-      <div class="row">
-        <a href="cibc.html">
-          <div class="two portfolio_bg sm">
-            <div id="cibc_bg" class="portfolio_bg_img"></div>
-            <div class="label">
-              <img src="images/cibc_logo.png" class="logo" />
-              <h4>Product Design</h4>
-            </div>
-          </div>
-        </a>
-        <a href="td.html">
-          <div class="two portfolio_bg sm last">
-            <div id="td_bg" class="portfolio_bg_img"></div>
-            <div class="label">
-              <img src="images/td_logo.png" class="logo" />
-              <h4>Visuals & Illustration</h4>
-            </div>
-          </div>
-        </a>
-      </div>
+  <div class="slim constraints">
+    <div class="blog_post">
+      <h2>Habit Forming Design</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pellentesque ex sed felis dignissim, hendrerit iaculis elit aliquam. Suspendisse quis pellentesque urna. Etiam hendrerit ornare nisl at blandit. Praesent sit amet tempor libero. Nunc at volutpat ex. Maecenas quis risus sollicitudin, sollicitudin massa nec, mattis augue. Fusce pellentesque ex sed felis dignissim, hendrerit iaculis elit aliquam. Suspendisse quis pellentesque urna. Etiam hendrerit ornare nisl at blandit. Praesent sit amet tempor libero. Nunc at volutpat ex. Maecenas quis risus sollicitudin, sollicitudin massa nec, mattis augue.</p>
     </div>
-  </div>
-  <footer>
-  </footer>
-  <script type="text/javascript" src="script/script.js"></script>
+    <a href="habits.html">Read More &rarr;</a>
+    <div class="blog_post">
+      <h2>Habit Forming Design</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pellentesque ex sed felis dignissim, hendrerit iaculis elit aliquam. Suspendisse quis pellentesque urna. Etiam hendrerit ornare nisl at blandit. Praesent sit amet tempor libero. Nunc at volutpat ex. Maecenas quis risus sollicitudin, sollicitudin massa nec, mattis augue. Fusce pellentesque ex sed felis dignissim, hendrerit iaculis elit aliquam. Suspendisse quis pellentesque urna. Etiam hendrerit ornare nisl at blandit. Praesent sit amet tempor libero. Nunc at volutpat ex. Maecenas quis risus sollicitudin, sollicitudin massa nec, mattis augue.</p>
+    </div>
+    <a href="">Read More &rarr;</a>
+    <div class="blog_post">
+      <h2>Habit Forming Design</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pellentesque ex sed felis dignissim, hendrerit iaculis elit aliquam. Suspendisse quis pellentesque urna. Etiam hendrerit ornare nisl at blandit. Praesent sit amet tempor libero. Nunc at volutpat ex. Maecenas quis risus sollicitudin, sollicitudin massa nec, mattis augue. Fusce pellentesque ex sed felis dignissim, hendrerit iaculis elit aliquam. Suspendisse quis pellentesque urna. Etiam hendrerit ornare nisl at blandit. Praesent sit amet tempor libero. Nunc at volutpat ex. Maecenas quis risus sollicitudin, sollicitudin massa nec, mattis augue.</p>
+    </div>
+    <a href="">Read More &rarr;</a>
+    <footer>
+    </footer>
+    <script type="text/javascript" src="script/script.js"></script>
 </body>
 
 </html>
