--- a/index.html
+++ b/index.html
@@ -23,25 +23,23 @@
       </ul>
     </div>
   </nav>
-  <div class="slim constraints">
+  <div style="margin-bottom: 60px;" class="slim constraints">
     <div class="blog_post">
       <h2>Habit Forming Design</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pellentesque ex sed felis dignissim, hendrerit iaculis elit aliquam. Suspendisse quis pellentesque urna. Etiam hendrerit ornare nisl at blandit. Praesent sit amet tempor libero. Nunc at volutpat ex. Maecenas quis risus sollicitudin, sollicitudin massa nec, mattis augue. Fusce pellentesque ex sed felis dignissim, hendrerit iaculis elit aliquam. Suspendisse quis pellentesque urna. Etiam hendrerit ornare nisl at blandit. Praesent sit amet tempor libero. Nunc at volutpat ex. Maecenas quis risus sollicitudin, sollicitudin massa nec, mattis augue.</p>
+      <p>Taking inspiration from both persuasive and behaviour design, habit forming design seems to specifially target the creation or manipulation of an individuals habits. Where it gets confusing, is what specifically defines a habit? Could a one time conversion be counted as a habit? It is an action? A thought? An emotion? To truly understand how to design for habits, its important to understand what and how habits are formed and influenced.</p>
     </div>
     <a href="habits.html">Read More &rarr;</a>
     <div class="blog_post">
-      <h2>Habit Forming Design</h2>
+      <h2>Synchronizing Digital and Phsyical Interfaces</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pellentesque ex sed felis dignissim, hendrerit iaculis elit aliquam. Suspendisse quis pellentesque urna. Etiam hendrerit ornare nisl at blandit. Praesent sit amet tempor libero. Nunc at volutpat ex. Maecenas quis risus sollicitudin, sollicitudin massa nec, mattis augue. Fusce pellentesque ex sed felis dignissim, hendrerit iaculis elit aliquam. Suspendisse quis pellentesque urna. Etiam hendrerit ornare nisl at blandit. Praesent sit amet tempor libero. Nunc at volutpat ex. Maecenas quis risus sollicitudin, sollicitudin massa nec, mattis augue.</p>
     </div>
     <a href="">Read More &rarr;</a>
     <div class="blog_post">
-      <h2>Habit Forming Design</h2>
+      <h2>International Design Standards</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pellentesque ex sed felis dignissim, hendrerit iaculis elit aliquam. Suspendisse quis pellentesque urna. Etiam hendrerit ornare nisl at blandit. Praesent sit amet tempor libero. Nunc at volutpat ex. Maecenas quis risus sollicitudin, sollicitudin massa nec, mattis augue. Fusce pellentesque ex sed felis dignissim, hendrerit iaculis elit aliquam. Suspendisse quis pellentesque urna. Etiam hendrerit ornare nisl at blandit. Praesent sit amet tempor libero. Nunc at volutpat ex. Maecenas quis risus sollicitudin, sollicitudin massa nec, mattis augue.</p>
     </div>
     <a href="">Read More &rarr;</a>
-    <footer>
-    </footer>
-    <script type="text/javascript" src="script/script.js"></script>
+  </div>
 </body>
 
 </html>
