--- a/habits.html
+++ b/habits.html
@@ -16,7 +16,7 @@
 <body>
   <nav id="nav">
     <div class="left  name">
-      <a href="index.html">Meaghan Choi</a>
+      <a href="index.html">Meaghan's Thoughts</a>
     </div>
     <div class="right">
       <ul class="nav ">
@@ -38,25 +38,41 @@
       <h6>The Habit Loop</h6>
       <p>While there are many different phsycological models for habits, they all seem to include similar themes. A habit is a multi-step cyclical process. This means that for an behavior to be considered a habit, it must complete the entire process. Charles Duhigg's habit loop includes three major steps: Trigger, Routine and Reward.
       </p>
+      <img src="images/habitloop.jpg" class="full_image">
+      <h5 class="caption">The Habit Loop by Charles Duhigg</h5>
       <div class="problem">
         <p>Charles Duhigg is a celebrated psychologist and anthropologist who created the Habit Loop and shared his findings in a great novel <a href="http://charlesduhigg.com/the-power-of-habit/">The Power of Habit</a>. If you're interested in learning more, I highly recommend this read!</p>
       </div>
     </div>
     <div class="constraints">
       <h6>The Hook Model</h6>
-      <p>To help develop the site objectives, I helped create a set of detailed personas. These personas would ideally assist in identifying the pain points in the current site as well as act as guiding principles for future designs. Using Gap's consumer insights, these personas included the shoppers' behaviour on the site and personality attributes. We focused on how different personas approached online shopping on BananaRepublic.com, and questioned everything from their brand loyalty to the devices they used to engage with the brand.</p>
+      <p>The Hook Model is a slight variance of the Habit Loop created by Nir Eyal whose objective was to understand spectifically how to build habit-forming behaviour into digital products. One of the major differences between this and the typical psychology habit loop is that it includes a final step: Investment. This step looks into developing the habit as a continuous routine, looking into an individual's likelihood to return or repeat.</p>
+      <img src="images/hook.png" class="full_image">
+      <h5 class="caption">The Hook Model by Nir Eyal</h5>
     </div>
     <div class="constraints">
       <h6>Design Takeways</h6>
-      <p>With insights in hand, I helped identify the pain points for each user and prioritized them against Banana Republic's business and design goals. Once pain points were established, the team created a clear statement indicating the high level problem(s) that needed to be solved. These six problem statements aligned the Design and UX teams so that we could begin to ideate and explore possible solutions. </p>
+      <p>Since Habit forming design is still relatively new, there are no set design standards or apporaches to manipulaitng or forming habits. Instead, I believe a deep understanding of the factors that influence or change habits can be used to help design products. A few major factors are:</p>
+      <ul>
+        <li><b>Belief and Community</b>: To help users establish or break a habit, a community can severely impact the success. This can come in the form of social media, online forums, digital coaches, etc. The community brings along not only a support system, but also a sense of belief, in either yourself or the product</li>
+        <li><b>The Golden Rule of Habit Change</b>: It is much easier to harness a current habit loops cravings and change the routine rather than destroy or create a habit. Understand you users and design the product to fit seamlessly within their current cycles or to take the place of a current routine.</li>
+        <li><b>Planning for obstacles</b>:Designing for failure can help users create contingency plans or provide the support that they need to change their habits. What does this mean for design? Design for empathy, understanding of failure, escapes, design for being okay with weakness</li>
+        <li><b>Motivation and Ability</b>: From the Fogg Behaviour model, understand the difference and relationship between motivation and ability. Consider how to harness knowledge of your users to provide the correct motivation, and design to give them the ability to accomplish this.</li>
+      </ul>
     </div>
     <div class="constraints">
       <h6>Ethics</h6>
-        <p>The goal of this exercise was to tackle the big problems together and build a hypothesis of what might work. The end result was a list potential solutions with a description of the problem whey were solving, and an overall idea of how to test and validate these assumptions. These sketches were organized by importance to Banana Republic and Gap, and categorized based on which pain point they addressed. While not explicitly stated as a solution, creating a responsive site was still a major objective in this project.</p>
-      </div>
-      <div class="constraints">
-        <h6>Application</h6>
-      <p>After collaboratively deciding which hypothesis were the most valuable, the features were all prototyped at different levels of fidelity. While all the features were prototyped to some degree of fidelity, the high priority features were fully built in Axure. I then personally created the final prototype in HTML/CSS to showcase the new interactivity and responsiveness of the site.
+      <p>In the case if phsycological manipulation, it is even more important constantly be aware of the ethical implications of your work. Ask yourself: Is it a violation of an individual's free will to intentionally prey upon their habits, and manipulate them to behave in a specific manner? While design does directly pull from psychology, it's important to respect the privacy and decisions of users. Particularly if the direction you guide them could be detrimental. At an extreme case, you could be designing for addication. Is it a designer's responsibility to ensure that products don't form dangerous addictions? Its importnat to consider the moral implications of designing for habits, and to understand the underlying impacts on users and society. Think of the smartphone, did desginers create a reliance that could be considered an addiction?</p>
+    </div>
+    <div class="constraints">
+      <h6>App Critique: Quit Pro</h6>
+      <p>In order to develop my habit forming design knowledge, I critiqued a smoking app: Quit Pro. This critique will not focus on the typical aspects of interface or experience design such as layout, navigation, flow but rather will focus solely on uncovering the successes and failures of the App as a habit changing mechanism to help smokers quit.The reason I decided to do an analysis of Quit Pro rather than the other apps as that Quit Pro’s methodologies seem to most strongly align with the psychology of habits. The key issues with this application were:</p>
+      <ul>
+        <li>Excellent identify cues and triggers, but does not help you complete the cycle; does not provide alternative actionsyou can take to get the reward.</li>
+        <li>Does not look into full habit cycles or routines, but seems to target only the reward.</li>
+        <li>There does not exist a community within the app</li>
+      </ul>
+      <p>My main takeaway is that it may not be possible to quit smoking through the app alone. Based on the variety of factors that influence the successful habit change, the app may only be able to take a user so far. The digital experience on its own seems to lack the sense of community, belief, support system that is inherent in changing a habit as serious as smoking.</p>
     </div>
   </div>
   <div class="bottom_nav">
