--- a/habits.html
+++ b/habits.html
@@ -38,7 +38,7 @@
       <h6>The Habit Loop</h6>
       <p>While there are many different phsycological models for habits, they all seem to include similar themes. A habit is a multi-step cyclical process. This means that for an behavior to be considered a habit, it must complete the entire process. Charles Duhigg's habit loop includes three major steps: Trigger, Routine and Reward.
       </p>
-      <img src="images/habitloop.jpg" class="full_image">
+      <img src="images/habitloop.png" class="full_image">
       <h5 class="caption">The Habit Loop by Charles Duhigg</h5>
       <div class="problem">
         <p>Charles Duhigg is a celebrated psychologist and anthropologist who created the Habit Loop and shared his findings in a great novel <a href="http://charlesduhigg.com/the-power-of-habit/">The Power of Habit</a>. If you're interested in learning more, I highly recommend this read!</p>
