--- a/habits.html
+++ b/habits.html
@@ -66,7 +66,7 @@
     </div>
     <div class="constraints">
       <h6>App Critique: Quit Pro</h6>
-      <p>In order to develop my habit forming design knowledge, I critiqued a smoking app: Quit Pro. This critique will not focus on the typical aspects of interface or experience design such as layout, navigation, flow but rather will focus solely on uncovering the successes and failures of the App as a habit changing mechanism to help smokers quit.The reason I decided to do an analysis of Quit Pro rather than the other apps as that Quit Pro’s methodologies seem to most strongly align with the psychology of habits. The key issues with this application were:</p>
+      <p>In order to develop my habit forming design knowledge, I critiqued a smoking app: <a href="http://www.quit-pro.com/">Quit Pro</a>. This critique will not focus on the typical aspects of interface or experience design such as layout, navigation, flow but rather will focus solely on uncovering the successes and failures of the App as a habit changing mechanism to help smokers quit.The reason I decided to do an analysis of Quit Pro rather than the other apps as that Quit Pro’s methodologies seem to most strongly align with the psychology of habits. The key issues with this application were:</p>
       <ul>
         <li>Excellent identify cues and triggers, but does not help you complete the cycle; does not provide alternative actionsyou can take to get the reward.</li>
         <li>Does not look into full habit cycles or routines, but seems to target only the reward.</li>
