--- a/habits.html
+++ b/habits.html
@@ -40,6 +40,11 @@
       </p>
       <img src="images/habitloop.png" class="full_image">
       <h5 class="caption">The Habit Loop by Charles Duhigg</h5>
+      <ul>
+        <li><b>Cue</b>: Also known as a trigger, the cue is the iniator of the habit loop. This can be a sense, a time of day, an action, a location, an emotion, etc.</li>
+        <li><b>Routine</b>: This is what is traditionally referred to as the "habit". In essence, the action, thought or event that you repeatedly execute.</li>
+        <li><b>Reward</b>: This can be intrinsic or extrinsic, physical or emotional, and can be positively ro negatively reinforced. The reward is really what makes a habit, since at the cue our body/mind craves the reward to a point where we subconsciously execute the routine. 
+      </ul>
       <div class="problem">
         <p>Charles Duhigg is a celebrated psychologist and anthropologist who created the Habit Loop and shared his findings in a great novel <a href="http://charlesduhigg.com/the-power-of-habit/">The Power of Habit</a>. If you're interested in learning more, I highly recommend this read!</p>
       </div>
@@ -49,6 +54,12 @@
       <p>The Hook Model is a slight variance of the Habit Loop created by Nir Eyal whose objective was to understand spectifically how to build habit-forming behaviour into digital products. One of the major differences between this and the typical psychology habit loop is that it includes a final step: Investment. This step looks into developing the habit as a continuous routine, looking into an individual's likelihood to return or repeat.</p>
       <img src="images/hook.png" class="full_image">
       <h5 class="caption">The Hook Model by Nir Eyal</h5>
+      <ul>
+        <li><b>Trigger</b>: Can be external or internal, the initial spark that gets someone into the system to be captured by successive hooks</li>
+        <li><b>Action</b>: The actual “habit” or the behaviour that is executed in expectation of a reward. This draws upon usability design to drive users to take action.</li>
+        <li><b>Reward:</b>This is what drives a habit and the main tool that designers use to create habits. Create a craving for a reward that helps hook in users.</li>
+        <li><b>Investment</b>: Where it is now the users responsibility to do some work. This can be sharing with friends, converting, etc.</li>
+      </ul>
     </div>
     <div class="constraints">
       <h6>Design Takeways</h6>
