--- a/habits.html
+++ b/habits.html
@@ -43,7 +43,7 @@
       <ul>
         <li><b>Cue</b>: Also known as a trigger, the cue is the iniator of the habit loop. This can be a sense, a time of day, an action, a location, an emotion, etc.</li>
         <li><b>Routine</b>: This is what is traditionally referred to as the "habit". In essence, the action, thought or event that you repeatedly execute.</li>
-        <li><b>Reward</b>: This can be intrinsic or extrinsic, physical or emotional, and can be positively ro negatively reinforced. The reward is really what makes a habit, since at the cue our body/mind craves the reward to a point where we subconsciously execute the routine. 
+        <li><b>Reward</b>: This can be intrinsic or extrinsic, physical or emotional, and can be positively ro negatively reinforced. The reward is really what makes a habit, since at the cue our body/mind craves the reward to a point where we subconsciously execute the routine.
       </ul>
       <div class="problem">
         <p>Charles Duhigg is a celebrated psychologist and anthropologist who created the Habit Loop and shared his findings in a great novel <a href="http://charlesduhigg.com/the-power-of-habit/">The Power of Habit</a>. If you're interested in learning more, I highly recommend this read!</p>
@@ -88,9 +88,9 @@
   </div>
   <div class="bottom_nav">
     <ul>
-      <li><a href="noom.html">Design for Habits</a></li>
+      <li><a href="habits.html">Design for Habits</a></li>
+      <li><a href="integrated.html">Integrated Interfaces</a></li>
       <!--
-      <li><a href="brol.html">Physical and Digital Design</a></li>
       <li><a href="fb4b.html">International Design</a></li>
       -->
     </ul>
