--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
       <p>Taking inspiration from both persuasive and behaviour design, habit forming design seems to specifially target the creation or manipulation of an individuals habits. Where it gets confusing, is what specifically defines a habit? Could a one time conversion be counted as a habit? It is an action? A thought? An emotion? To truly understand how to design for habits, its important to understand what and how habits are formed and influenced.</p>
     </div>
     <a href="habits.html">Read More &rarr;</a>
-    <!--
     <div class="blog_post">
-      <h2>Synchronizing Digital and Phsyical Interfaces</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pellentesque ex sed felis dignissim, hendrerit iaculis elit aliquam. Suspendisse quis pellentesque urna. Etiam hendrerit ornare nisl at blandit. Praesent sit amet tempor libero. Nunc at volutpat ex. Maecenas quis risus sollicitudin, sollicitudin massa nec, mattis augue. Fusce pellentesque ex sed felis dignissim, hendrerit iaculis elit aliquam. Suspendisse quis pellentesque urna. Etiam hendrerit ornare nisl at blandit. Praesent sit amet tempor libero. Nunc at volutpat ex. Maecenas quis risus sollicitudin, sollicitudin massa nec, mattis augue.</p>
+      <h2>Integrating Digital and Phsyical Interfaces</h2>
+      <p>With the advancement of technology, many consumer products are beginning to harness the power of using both digital and physical interfaces. The integration of interactions design and industrial design can result in richer, deeper experiences. Unfortunately, when executed incorrectly, this integration can lead to confusion or even failure of product usability. It’s a major design challenge to determine how to define the boundary between physical and digital interfaces and which medium each task/scenario should employ. In many products, this combination is used ineffectively, or may not be necessary at all. In fact, it’s not uncommon to see designs using known physical or digital interface design guidelines improperly. 
+</p>
     </div>
-    <a href="">Read More &rarr;</a>
+    <a href="integrated.html">Read More &rarr;</a>
+    <!--
     <div class="blog_post">
       <h2>International Design Standards</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pellentesque ex sed felis dignissim, hendrerit iaculis elit aliquam. Suspendisse quis pellentesque urna. Etiam hendrerit ornare nisl at blandit. Praesent sit amet tempor libero. Nunc at volutpat ex. Maecenas quis risus sollicitudin, sollicitudin massa nec, mattis augue. Fusce pellentesque ex sed felis dignissim, hendrerit iaculis elit aliquam. Suspendisse quis pellentesque urna. Etiam hendrerit ornare nisl at blandit. Praesent sit amet tempor libero. Nunc at volutpat ex. Maecenas quis risus sollicitudin, sollicitudin massa nec, mattis augue.</p>
