--- a/habits.html
+++ b/habits.html
@@ -32,18 +32,18 @@
   <div class="slim">
     <div class="constraints">
       <h6>What is habit forming design?</h6>
-      <p>Taking inspiration from both persuasive and behaviour design, habit forming design seems to specifially target the creation or manipulation of an individuals habits. Where it gets confusing, is what specifically defines a habit? Could a one time conversion be counted as a habit? It is an action? A thought? An emotion? To truly understand how to design for habits, its important to understand what and how habits are formed and influenced.</p>
+      <p>Taking inspiration from both persuasive and behavior design, habit forming design seems to specifically target the creation or manipulation of an individuals habits. Where it gets confusing, is what specifically defines a habit? Could a one time conversion be counted as a habit? It is an action? A thought? An emotion? To truly understand how to design for habits, its important to understand what and how habits are formed and influenced.</p>
     </div>
     <div class="constraints">
       <h6>The Habit Loop</h6>
-      <p>While there are many different phsycological models for habits, they all seem to include similar themes. A habit is a multi-step cyclical process. This means that for an behavior to be considered a habit, it must complete the entire process. Charles Duhigg's habit loop includes three major steps: Trigger, Routine and Reward.
+      <p>While there are many different psychological models for habits, they all seem to include similar themes. A habit is a multi-step cyclical process. This means that for an behavior to be considered a habit, it must complete the entire process. Charles Duhigg's habit loop includes three major steps: Trigger, Routine and Reward.
       </p>
       <img src="images/habitloop.png" class="full_image">
       <h5 class="caption">The Habit Loop by Charles Duhigg</h5>
       <ul>
-        <li><b>Cue</b>: Also known as a trigger, the cue is the iniator of the habit loop. This can be a sense, a time of day, an action, a location, an emotion, etc.</li>
+        <li><b>Cue</b>: Also known as a trigger, the cue is the initiator of the habit loop. This can be a sense, a time of day, an action, a location, an emotion, etc.</li>
         <li><b>Routine</b>: This is what is traditionally referred to as the "habit". In essence, the action, thought or event that you repeatedly execute.</li>
-        <li><b>Reward</b>: This can be intrinsic or extrinsic, physical or emotional, and can be positively ro negatively reinforced. The reward is really what makes a habit, since at the cue our body/mind craves the reward to a point where we subconsciously execute the routine.
+        <li><b>Reward</b>: This can be intrinsic or extrinsic, physical or emotional, and can be positively or negatively reinforced. The reward is really what makes a habit, since at the cue our body/mind craves the reward to a point where we subconsciously execute the routine.
       </ul>
       <div class="problem">
         <p>Charles Duhigg is a celebrated psychologist and anthropologist who created the Habit Loop and shared his findings in a great novel <a href="http://charlesduhigg.com/the-power-of-habit/">The Power of Habit</a>. If you're interested in learning more, I highly recommend this read!</p>
@@ -51,48 +51,61 @@
     </div>
     <div class="constraints">
       <h6>The Hook Model</h6>
-      <p>The Hook Model is a slight variance of the Habit Loop created by Nir Eyal whose objective was to understand spectifically how to build habit-forming behaviour into digital products. One of the major differences between this and the typical psychology habit loop is that it includes a final step: Investment. This step looks into developing the habit as a continuous routine, looking into an individual's likelihood to return or repeat.</p>
+      <p>The Hook Model is a slight variance of the Habit Loop created by Nir Eyal whose objective was to understand specifically how to build habit-forming behavior into digital products. One of the major differences between this and the typical psychology habit loop is that it includes a final step: Investment. This step looks into developing the habit as a continuous routine, looking into an individual's likelihood to return or repeat.</p>
       <img src="images/hook.png" class="full_image">
       <h5 class="caption">The Hook Model by Nir Eyal</h5>
       <ul>
         <li><b>Trigger</b>: Can be external or internal, the initial spark that gets someone into the system to be captured by successive hooks</li>
-        <li><b>Action</b>: The actual “habit” or the behaviour that is executed in expectation of a reward. This draws upon usability design to drive users to take action.</li>
+        <li><b>Action</b>: The actual “habit” or the behavior that is executed in expectation of a reward. This draws upon usability design to drive users to take action.</li>
         <li><b>Reward:</b>This is what drives a habit and the main tool that designers use to create habits. Create a craving for a reward that helps hook in users.</li>
         <li><b>Investment</b>: Where it is now the users responsibility to do some work. This can be sharing with friends, converting, etc.</li>
       </ul>
     </div>
     <div class="constraints">
       <h6>Design Takeways</h6>
-      <p>Since Habit forming design is still relatively new, there are no set design standards or apporaches to manipulaitng or forming habits. Instead, I believe a deep understanding of the factors that influence or change habits can be used to help design products. A few major factors are:</p>
+      <p>Since Habit forming design is still relatively new, there are no set design standards or approaches to manipulating or forming habits. Instead, I believe a deep understanding of the factors that influence or change habits can be used to help design products. A few major factors are:</p>
       <ul>
         <li><b>Belief and Community</b>: To help users establish or break a habit, a community can severely impact the success. This can come in the form of social media, online forums, digital coaches, etc. The community brings along not only a support system, but also a sense of belief, in either yourself or the product</li>
         <li><b>The Golden Rule of Habit Change</b>: It is much easier to harness a current habit loops cravings and change the routine rather than destroy or create a habit. Understand you users and design the product to fit seamlessly within their current cycles or to take the place of a current routine.</li>
         <li><b>Planning for obstacles</b>:Designing for failure can help users create contingency plans or provide the support that they need to change their habits. What does this mean for design? Design for empathy, understanding of failure, escapes, design for being okay with weakness</li>
-        <li><b>Motivation and Ability</b>: From the Fogg Behaviour model, understand the difference and relationship between motivation and ability. Consider how to harness knowledge of your users to provide the correct motivation, and design to give them the ability to accomplish this.</li>
+        <li><b>Motivation and Ability</b>: From the Fogg Behavior model, understand the difference and relationship between motivation and ability. Consider how to harness knowledge of your users to provide the correct motivation, and design to give them the ability to accomplish this.</li>
       </ul>
     </div>
     <div class="constraints">
       <h6>Ethics</h6>
-      <p>In the case if phsycological manipulation, it is even more important constantly be aware of the ethical implications of your work. Ask yourself: Is it a violation of an individual's free will to intentionally prey upon their habits, and manipulate them to behave in a specific manner? While design does directly pull from psychology, it's important to respect the privacy and decisions of users. Particularly if the direction you guide them could be detrimental. At an extreme case, you could be designing for addication. Is it a designer's responsibility to ensure that products don't form dangerous addictions? Its importnat to consider the moral implications of designing for habits, and to understand the underlying impacts on users and society. Think of the smartphone, did desginers create a reliance that could be considered an addiction?</p>
+      <p>In the case if psychological manipulation, it is even more important constantly be aware of the ethical implications of your work. Ask yourself: Is it a violation of an individual's free will to intentionally prey upon their habits, and manipulate them to behave in a specific manner? While design does directly pull from psychology, it's important to respect the privacy and decisions of users. Particularly if the direction you guide them could be detrimental. At an extreme case, you could be designing for addiction. Is it a designer's responsibility to ensure that products don't form dangerous addictions? Its important to consider the moral implications of designing for habits, and to understand the underlying impacts on users and society. Think of the smart phone, did designers create a reliance that could be considered an addiction?</p>
     </div>
     <div class="constraints">
       <h6>App Critique: Quit Pro</h6>
       <p>In order to develop my habit forming design knowledge, I critiqued a smoking app: <a href="http://www.quit-pro.com/">Quit Pro</a>. This critique will not focus on the typical aspects of interface or experience design such as layout, navigation, flow but rather will focus solely on uncovering the successes and failures of the App as a habit changing mechanism to help smokers quit.The reason I decided to do an analysis of Quit Pro rather than the other apps as that Quit Pro’s methodologies seem to most strongly align with the psychology of habits. The key issues with this application were:</p>
       <ul>
-        <li>Excellent identify cues and triggers, but does not help you complete the cycle; does not provide alternative actionsyou can take to get the reward.</li>
-        <li>Does not look into full habit cycles or routines, but seems to target only the reward.</li>
-        <li>There does not exist a community within the app</li>
+        <li><b>Community</b>: Sharing your journey with a community can help provide the support that you need in order to overcome your obstacles. Unfortunately, in Quit Pro, the community itself is not going through the same challenges as you and this can potentially make the community more of a burden than a support system</li>
+        <li><b>Triggers</b>: In my opinion the identification of triggers is one of the most successful features in the application. It allows you to identify your triggers for smoking in order to help you understand point at which you are vulnerable. What the app fails to do, which I think would really take the design to the next level, is pro actively attempt to prevent you from being in vulnerable situations. Additionally, it is up to the user to recall to enter triggers.</li>
+        <li><b>Rewards:</b> The rewards section of the app seems very arbitrary with no real incentive to earn rewards outside of intrinsic motivation. Linking this with the community to gamify accomplishments would be a better approach.</li>
       </ul>
       <p>My main takeaway is that it may not be possible to quit smoking through the app alone. Based on the variety of factors that influence the successful habit change, the app may only be able to take a user so far. The digital experience on its own seems to lack the sense of community, belief, support system that is inherent in changing a habit as serious as smoking.</p>
+    </div>
+    <div class="constraints">
+    <h6>Redesign: Quit Pro</h6>
+      <p>After diving deeper into the critique for Quit Pro, I developed a low fidelity prototype that addresses some of the issues with the current app. In order to ensure that the focus was on the user flow rather than the visuals of the app (addressing the issues at the )
+      <ul>
+      <li><b>Language:</b> To preface this, I am definitely not a genius copywriter, but its I think its important to emphasize the impact of well-chosen language in aiding in the quitting process. It's important that the process feels like a journey that the app will help guide you through. This provides allows for challenges and provides context for the community to be introduced later.</li>
+      <li><b>Identifying triggers</b>: The first 7 days of this program aims to preemptively help users identify triggers - before they start quitting. This way, instead of having the app reactively help users, it can predict the times/places where individuals might need support and provide them that outlet as soon as possible (Potentially as a push notification). This includes identifying a time, place, number of cigarettes as well as the supposed source (which will be a dropdown of choices such as social, boredom, stress, etc.). These screens encompass Day 1 - Day 8, where on Day 8 you begin the quitting journey.</li>
+      <li><b>Community focused</b>: At the end of the week trigger identification, the program takes your data and tries to match you with a group that will best suit your needs. In this group, ideally (like in A.A.) there will be individuals at different stages of the quitting process to help you out. These will be anonymous individuals that you can communicate your problems, your successes and potentially even serve as a replacement reward for individuals who see smoking for social purposes. You can post to the entire group, or send individual messages, making this feature a core function of the app. This can be seen on the "COMMUNITY" page in teh app.</li>
+      <li><b>The golden rule of habit change</b>: On the home screen, you can see that one of the main changes in the app is completing the habit cycle by providing alternative rewards such as simple games, socializing with a community, etc. These would depend on an individual's needs, but all aim to prevent stimuli other than smoking for users. This would ideally help individuals replace the reward they feel smoking, with a healthier, accessible action.</li>
+      <li><b>Planning for failure</b>:Providing a plan for failure in order to help users overcome their obstacles, and not give up once they make a single mistake is a crucial feature that is missing in the original Quit Pro. It's important to find the balance between making it easy for users to fail, and making it too easy for users to fail. In this there is a large visible (+) button on the home screen of the app. Clicking on this would take users through the option to add a trigger, or add a cigarette. The process of adding a cigarette would not be quit, but would ask users the source, reason, their reaction and then pair them with their community to share (either with one individual or the whole group). This way users can then get support and belief from their community to continue with their quitting journey.</li>
+      </ul>
+      <p>The above changes resulted in the following prototype. Please note that only certain specific elements on each screen function. The purpose of this prototype is to guide a new user through the process of setting up their account, joining a community and then beginning to use the app.</p>
+      <div class="center">
+      <iframe width="438" height="930" src="https://invis.io/HXARBSVNF" frameborder="0" allowfullscreen></iframe>
+      </div> 
     </div>
   </div>
   <div class="bottom_nav">
     <ul>
       <li><a href="habits.html">Design for Habits</a></li>
       <li><a href="integrated.html">Integrated Interfaces</a></li>
-      <!--
-      <li><a href="fb4b.html">International Design</a></li>
-      -->
+      <li><a href="education.html">Design for International</a></li>
     </ul>
   </div>
 </body>
