--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <a href="habits.html">Read More &rarr;</a>
     <div class="blog_post">
-      <h2>Integrating Digital and Phsyical Interfaces</h2>
+      <h2>Integrating Digital and Physical Interfaces</h2>
       <p>With the advancement of technology, many consumer products are beginning to harness the power of using both digital and physical interfaces. The integration of interactions design and industrial design can result in richer, deeper experiences. Unfortunately, when executed incorrectly, this integration can lead to confusion or even failure of product usability. It’s a major design challenge to determine how to define the boundary between physical and digital interfaces and which medium each task/scenario should employ. In many products, this combination is used ineffectively, or may not be necessary at all. In fact, it’s not uncommon to see designs using known physical or digital interface design guidelines improperly. 
 </p>
     </div>
