--- a/integrated.html
+++ b/integrated.html
@@ -27,15 +27,12 @@
   </nav>
   <div class="main_copy">
     <h2>Integrating Interfaces</h2>
-    <h3>A personal exploration into understanding the dos and donts of integrated physical-digital interface design.</h3>
+    <h3>A personal exploration into understanding the dos and don'ts of integrated physical-digital interface design.</h3>
   </div>
   <div class="slim">
     <div class="constraints">
-      <h6>The Problem</h6>
-      <p>With the advancement of technology, many consumer products are beginning to harness the power of using both digital and physical interfaces. The integration of interactions design and industrial design can result in richer, deeper experiences. Unfortunately, when executed incorrectly, this integration can lead to confusion or even failure of product usability. It’s a major design challenge to determine how to define the boundary between physical and digital interfaces and which medium each task/scenario should employ. In many products, this combination is used ineffectively, or may not be necessary at all. In fact, it’s not uncommon to see designs using known physical or digital interface design guidelines improperly.</p>
-    </div>
-    <div class="problem">
-      <p>IoT devices rely heavily on the interface between the physical and digital world, this could be why it has become so difficult to integrate many of these devices into our lives. These take many items of processes in the home and have added a digitized, controllable component (typically from a mobile or desktop interface). Taking physical objects that have been designed and refined over centuries, and adding an additional layer of technology to provide a wider set of functionality.</p>
+      <h6>What are Integrated Interfaces?</h6>
+      <p>With the advancement of technology, many consumer products are beginning to harness the power of using both digital and physical interfaces - or integrated interfaces. The integration of interaction design and industrial design can result in richer, deeper experiences. Unfortunately, when executed incorrectly, this integration can lead to confusion or even failure of product usability. It’s a major design challenge to determine how to define the boundary between physical and digital interfaces and which medium each task/scenario should employ. In many products, this combination is used ineffectively, or may not be necessary at all. In fact, it’s not uncommon to see designs using known physical or digital interface design guidelines improperly.</p>
     </div>
     <div class="constraints">
       <h6>Skeuomorphism</h6>
@@ -49,7 +46,7 @@
     <div class="constraints">
       <h6>Benefits of Integrated Interfaces</h6>
       <ol>
-        <li>Having digital and industrial design work together can create a unified digital-physical  brand experience that acts across all interfaces is most impactful and memorable.</li>
+        <li>Having digital and industrial design work together can create a unified digital-physical brand experience that acts across all interfaces is most impactful and memorable.</li>
         <li>Harnessing the knowledge and experience from two industries to create a richer, more fluid user experience.</li>
         <li>Historically, no further improvements can be made without significant retooling to a physical product after it’s released, but incorporating digital elements and the ability to update firmware allows for post-launch updates to be pushed out to customers. Interactive onboarding, introducing new features, and responding to customer feedback lead to increased customer engagement and brand advocacy.</li>
       </ol>
@@ -62,26 +59,41 @@
         </li>
       </ol>
     </div>
-     <div class="constraints">
-      <h6>My Recommendations</h6>
+    <div class="constraints">
+      <h6>Design Takeaways</h6>
       <p>Because the functionality of each integrated product is so unique, it is difficult to develop a set of design standards to help designers create amazing joint physical and digital interfaces. Instead, I believe a set of recommendations on the approach to such problems, is more beneficial. These are as follows.</p>
       <ul>
-        <li><b>Research</b>: It is imperative that design research into both the physical and cognitive tolerances in context of the user’s environment is conducted.</li>
-        <li><b>Cross Functional Teams</b>: Diverse teams are critical to designing physical and digital experiences. Ensure that it is created together, not as siloed opportunities.</li>
+        <li><b>Research</b>: It is imperative that design research into both the physical and cognitive tolerances in context of the user’s environment is conducted. Equally and continuously throughout the design process. Too often designers will focus on one modality, when in integrated interfaces, consideration of both is crucial to success,</li>
+        <li><b>Cross Functional Teams</b>: Diverse teams are critical to designing physical and digital experiences. Ensure that it is created together, not as siloed opportunities. Consistent and continuous, communication of ideas, assumptions and design decisions becomes even more important on these cross functional teams.</li>
         <li><b>Affordances</b>: Create affordances for both physical and digital interfaces, in their correct mode. Ensure that the affordances indicate which interface the user should interact with.</li>
-        <li><b>Feedback</b>: Provide valuable feedback on system status of both the physical and digital interfaces.</li>
-        <li><b>Models</b>: With the complexity of another layer in the interface mode, it is extremely important to align conceptual model with user’s mental model.</li>
-        <li><b>Workflow Analysis</b>: Do not add extra, unnecessary steps just to harness the power of both interfaces: ie. adding an app to turn on your lights: 1. Switch, 2. Pull out phone, unlock phone, open app, turn on lights</li>
+        <li><b>Feedback</b>: Provide valuable feedback on system status of both the physical and digital interfaces. Ensure that feedback is provided in the proper modality, or both if it aligns with the users expectations.</li>
+        <li><b>Models</b>: With the complexity of another layer in the interface, it is extremely important to align conceptual model with user’s mental model. Deep dives into the user's mental model of the system such as "how it should work", "how I think it works", etc. can prove invaluable when making design decisions.</li>
+        <li><b>Workflow Analysis</b>: DO NOT add extra, unnecessary steps just to harness the power of both interfaces: ie. adding an app to turn on your lights: 1. Switch, 2. Pull out phone, unlock phone, open app, turn on lights</li>
+      </ul>
+    </div>
+    <div class="constraints">
+      <h6>Application: Internet Of Things</h6>
+      <p>Internet of Things (IoT) devices rely heavily on the interface between the physical and digital world, this could be why it has become so difficult to integrate many of these devices into our lives. These take many items of processes in the home and have added a digitized, controllable component (typically from a mobile or desktop interface). Taking physical objects that have been designed and refined over centuries, and adding an additional layer of technology to provide a wider set of functionality. While some of these devices have been praised for their design ingenuity (such as Nest Thermostats), others have quickly lead to failure due to the complexity of their control systems and poor design of their interfaces. In order to apply the skills and knowledge I have learnt studying integrated interfaces, I will design a simple IoT device (ignoring potential technical limitation): the refrigerator.</p>
+    </div>
+    <div class="constraints">
+      <h6>Design: IoT Fridge</h6>
+      <p>It is important to note that I am not trying to drastically change or alter the current functions of a fridge. Instead, I'm aiming - like most integrated devices - to add additional functionality to the product. This additional functionality is meant to ease some of the burdens a user may typically have with this common household appliance, or add additional features that could make the experience richer. </p>
+      <ul>
+        <li>Light: Physical Control with digital </li>
+        <li>Temperature: Keep in physical and add digital? Or just go digital? Confusing to have it both, right now fridges are confusing, keep it one track. only set, not current sinc eyou would not change this temp often so current is likely always set. Prevent accidental clicks would always be asked to confirm change in temp before changing temp.</li>
+        <li>Reminders: Replace a light, change the filter, you've run out of eggs/milk (if there is a special compartment for this) all digital, could connect to a mobile app in true IoT fashion (depending on users desires this should be optional)</li>
+        <li>Energy consumption: Digital, maybe even tell you if the fridge/freezer has been open too long. THIS IS NOT SUPER USEFUL BECAUSE UNLIKE HEAT/LIGHTS YOU WONT CHANGE CONSUMPTION.</li>
+        <li>Time: nice to have in a kitchen, happens alot when idividuals look for time auto synch with server, when not in use it will just display time (maybe even date). Motion detected to activate display based on proximity to fridge or movement of door.</li>
+        <li>Reminders: maybe you can set these from your phone or from the display, like pick up eggs, throw out etc. almost like that note pad you always have on yoru fridge</li>
+        <li>Capacity: how mcuh space you have left in your fridge. Maybe you can access this on mobile when grocery shopping to help dictate your purchases.</li>
       </ul>
     </div>
   </div>
- <div class="bottom_nav">
+  <div class="bottom_nav">
     <ul>
       <li><a href="habits.html">Design for Habits</a></li>
       <li><a href="integrated.html">Integrated Interfaces</a></li>
-      <!--
-      <li><a href="fb4b.html">International Design</a></li>
-      -->
+      <li><a href="education.html">Design for International</a></li>
     </ul>
   </div>
 </body>
